...
                android:layout_marginBottom="1dp"
                android:text="@{mapModel.unmetRequirement}"
                android:visibility="@{mapModel.hasUnmetRequirement}"
                tools:visibility="gone"/>

            <TextView
                android:id="@+id/error_panel"
                style="@style/RATextView.Inactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/connection_problems"
                android:visibility="@{!mapModel.hasServerConnection}"
...
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rate_driver_divider_height"
                    android:layout_below="@+id/pickup_address"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/destination_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_below="@id/address_divider"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
...
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/rate_driver_divider_height"
                        android:layout_below="@+id/destination_address"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/comment"
                        style="@style/RATextView.MontserratLight"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/autocomplete_height"
                        android:layout_below="@id/comments_divider"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/white"
...
