...

    <string name="placeholder_home_location">Home\n205 Congress ave # 2555</string>
    <string name="placeholder_location">Work\n401 Congress Ave #2650</string>
    <string name="rider_home_label">Home\n</string>
    <string name="rider_work_label">Work\n</string>
    <string name="message_ride_cancelled_by_driver">Your ride is cancelled by the driver.</string>
    <string name="message_ride_cancelled_by_admin">Your ride is cancelled by admin.</string>
    <string name="message_ride_cancelled_by_user">Your ride has been successfully cancelled</string>
    <string name="phone">Phone</string>
    <string name="unknown_error">Something went wrong. Please try again later.</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_telephone">tel:</string>
    <string name="text_regular_car_label">Regular</string>
    <string name="text_suv_car_label">SUV</string>
    <string name="text_luxury_car_label">Premium</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="your_last_trip">Your Last Trip</string>
    <string name="comment_if_rate_is_less">Comment is required if rate is less than 3</string>
    <string name="price_placeholder">0</string>
    <string name="cannot_logout_during_ride">You cannot logout during active ride</string>
    <string name="extra_sms">sms_body</string>
    <string name="text_tabulation">\t</string>
    <string name="version">Version\u00A0</string>
    <string name="navigate">Navigate</string>

    <!--Driver Map Fragment -->
...
